# firt

./: .env.example  .gitignore  index.html  main.ipynb  pyproject.toml  server.py  weather.ipynb
