[project]
name = "agent-project1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.26.0",
    "notebook>=7.6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
